tests/miniJava/neg/005281_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] int [] java ; java ( ) { return 0 ; } }
